--- a/assets/css/lighttheme.css
+++ b/assets/css/lighttheme.css
@@ -51,14 +51,14 @@ body {
   background: transparent;
 }
 #myCarousel {
-  max-width: 2400px;
+  max-width: 1900px;
   margin: 0 auto;
   position: relative;
 }
 
 .carousel-control-next, .carousel-control-prev {
-    width: 13% !important;
-    z-index: 1;
+  width: 12% !important;
+  z-index: 1;
 }
 
 .carousel-inner {
@@ -72,29 +72,21 @@ body {
 .carousel-item {
   padding-bottom: 0px;
 }
-/* video {
-  position: static;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: -100;
-  transform: translateX(0%) translateY(0%);
-  background-size: cover;
-  transition: 0s opacity;
-  cursor: pointer;
-  filter: grayscale(100%) blur(3px) brightness(100%);
-  filter: grayscale(50%) blur(1px) brightness(80%);
-} */
 
 .video-container {
   position: relative;
   width: 100%;
   height: 0;
-  padding-top: 48.2%; /* 16:9 aspect ratio */
+  padding-top: 47.2%; /* 16:9 aspect ratio */
   overflow: hidden;
+}
+
+.video-controls {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  transform: translateY(-40%);
 }
 
 video {
@@ -104,7 +96,7 @@ video {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  cursor: pointer;
+  cursor: auto;
   filter: grayscale(50%) blur(1px) brightness(80%);
 }
 
@@ -115,7 +107,12 @@ video {
     padding-top: 200%; /* Adjust the percentage for smaller screens */
     height: 100%;
   }
+
+  .carousel-control-next, .carousel-control-prev {
+    width: 20% !important; /* Adjust the width for smaller screens */
+  }
 }
+
 .stopfade { 
    opacity: .5;
 }
