--- a/assets/css/lighttheme.css
+++ b/assets/css/lighttheme.css
@@ -60,6 +60,29 @@ body {
   width: 12% !important;
   z-index: 1;
   top: 50%;
+  position: absolute;
+  font-size: 24px;
+}
+
+
+.carousel-control-next::before, .carousel-control-prev::before {
+  content: '';
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border-radius: 50%;
+  position: absolute;
+  color: black;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: background-color 0.3s ease;
+}
+
+.carousel-control-next:hover::before, .carousel-control-prev:hover::before {
+  background-color: rgba(255, 255, 255, 0.9); 
+  color: black;
 }
 
 .carousel-inner {
@@ -77,7 +100,7 @@ body {
 .video-container {
   position: relative;
   width: 100%;
-  height: 0;
+  height: auto;
   padding-top: 47.2%; /* 16:9 aspect ratio */
   overflow: hidden;
 }
@@ -114,7 +137,32 @@ video {
     z-index: 1;
     top: 50%;
   }
+  .img-fluid {
+    max-width: 100%;
+    height: auto;
+    justify-content: center;
+  }
 }
+#slideText {
+  position: fixed;
+  top: 57%;
+  left: 15%;
+  color: white;
+  font-weight: 1000;
+  font-size: 32px;
+  text-align: center;
+  text-shadow: 0px 0px 20px rgba(0, 0, 0, .7);
+  -webkit-text-stroke: 1.2px rgb(0, 0, 0);
+  overflow: hidden;
+  z-index: 1000;
+}
+#slideText:hover {
+  color: rgba(255, 0, 0, 0.5); /* Text color on hover */
+  background-color: rgba(255,255,255,.5);
+  text-decoration: underline blue; /* Underline on hover */
+}
+
+
 
 .stopfade { 
    opacity: .5;
@@ -172,7 +220,7 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
   z-index: 1997;
   overflow-y: auto;
-  opacity: 0.5;
+  opacity: 0.7;
   box-shadow: 0 20px 20px 0 rgba(0,0,0,.2);
 
 
@@ -1304,7 +1352,7 @@ section .container {
   font-size: 32px;
   color: #fff;
   z-index: 999;
-  opacity: 0.4;
+  opacity: 0.7;
   box-shadow: 20px 20px 20px 20px rgba(0,0,0,.2);
 
 }
